--- a/.gitignore
+++ b/.gitignore
@@ -2,8 +2,7 @@
 **/private/students.json
 .ragatouille/*
 */__pycache__/*
-.chainlit/translations/
-code/.chainlit/translations/
+**/.chainlit/translations/*
 storage/logs/*
 vectorstores/*
 **/apps/*/storage/logs/*
