--- a/.gitignore
+++ b/.gitignore
@@ -1,12 +1,15 @@
 **/vectorstores/*
 **/private/students.json
 .ragatouille/*
-*/__pycache__/*
+**/__pycache__/*
 **/.chainlit/translations/*
-storage/logs/*
-vectorstores/*
+**/storage/logs/*
+**/vectorstores/*
 **/apps/*/storage/logs/*
 **/apps/*/private/*
 *.log
 **/.files/*
 .env
+*.pyc
+venv/
+apps
