--- a/.github/workflows/deploy_to_hf.yml
+++ b/.github/workflows/deploy_to_hf.yml
@@ -2,7 +2,7 @@ name: Push Production to HuggingFace
 
 on:
   push:
-    branches: [main, retargeting]
+    branches: [main]
 
   # run this workflow manualy from the Actions tab
   workflow_dispatch:
