--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+venv/
+venv/*
+*.pyc
+
 **/vectorstores/*
 **/private/students.json
 .ragatouille/*
@@ -10,3 +14,5 @@ vectorstores/*
 *.log
 **/.files/*
 .env
+
+
