Config manager change

--- a/apps/ai_tutor/config/config.yml
+++ b/apps/ai_tutor/config/config.yml
@@ -10,7 +10,7 @@ vectorstore:
   expand_urls: False # bool
   db_option: "FAISS" # str [FAISS, Chroma, RAGatouille, RAPTOR]
   db_path: "vectorstores" # str
-  model: "sentence-transformers/all-MiniLM-L6-v2" # str [sentence-transformers/all-MiniLM-L6-v2, text-embedding-ada-002']
+  model: "text-embedding-ada-002" # str [sentence-transformers/all-MiniLM-L6-v2, text-embedding-ada-002']
   search_top_k: 5 # int
   score_threshold: 0.3 # float
 
